public_html/css/styles.css
/* ... */
.dataset-item {
  margin-left: 64px;
  margin-bottom: 30px;
}
.dataset-date {
  /* display: inline-block;*/
}
.dataset-display {
  display: inline-block;
}
/**
Dataset detail
 */
.dataset-category-item {
  display: inline-flex;
  margin-left: 12px;
}
.dataset-category-item img {
  height: 30px;
  width: 30px;
}
.v-center {
  vertical-align: super;
}
.block-right-width {
  float: right;
}
.no-padding {
  padding: 0 !important;
  margin: 0 !important;
}
.no-table-border {
  border-top-width: 0 !important;
}
.dataset-name-column-detail {
  padding-left: 64px;
}
.dataset-detail-content {
  padding-left: 128px;
}
.dataset-item-file {
  margin-bottom: 30px;
}
.padding-mobile {
  padding: 15px !important;
}
.border-less td,
.border-less th {
  border: none;
}
.format-type-detail {
  height: 60px;
  width: 60px;
  display: inline-block;
  color: #FFF;
  font-size: 14px;
  margin-left: 5px;
  margin-top: 5px;
}
.format-type-detail.csv {
  background-color: orange;
}
.format-type-detail.xml {
  background-color: olivedrab;
}
.format-type-detail.json {
  background-color: mediumslateblue;
}
.format-type a {
  text-decoration: none;
  color: #FFF;
}
.center-icon-type {
  padding-top: 10px;
}
.pull-down-button {
  margin-top: 40px;
}
.line-blue-light {
  height: 1px;
  background-color: #8de1ff;
  margin-top: 8px;
  margin-bottom: 12px;
}
.line-grey-light {
  height: 1px;
  background-color: #cccccc;
  margin-top: 8px;
  margin-bottom: 12px;
}
.dataset-link-blue-middle {
  color: #27aae1;
}
.icon-download-one,
.icon-views,
.dataset-categories {
  font-size: 20px;
}
.downloads-count,
.views-count {
  margin-left: 10px;
  margin-right: 10px;
  font-size: 14px;
  font-weight: 200;
  display: inline-block;
  vertical-align: super;
}
.dataset-analytics {
  position: relative;
}
.dataset-description {
  height: 100px;
  text-align: justify;
}
.format-type {
  height: 20px;
  width: 50px;
  display: inline-block;
  color: #FFF;
  font-size: 14px;
  margin-left: 5px;
  margin-top: 5px;
}
.format-type.csv {
  background-color: orange;
}
.format-type.xml {
  background-color: olivedrab;
}
.format-type.json {
  background-color: mediumslateblue;
}
.format-type a {
  text-decoration: none;
  color: #FFF;
}
.entity-image img {
  width: 51px;
}
.main-data {
  padding-right: 40px;
}
.filter select {
  border-radius: 5px;
  width: 100%;
  color: grey;
}
.margin-p-40 {
  margin-top: 5px;
}
.top-search {
  background-color: #003f64;
}
.top-breadcrumb {
  margin-left: 0px;
  padding-left: 25px;
  background-color: #e6e6e6;
  text-transform: uppercase;
}
.top-breadcrumb a {
  color: #ff7a6c;
}
.sort {
  color: #ff7a6c;
  font-size: 14px;
  font-weight: normal;
}
#sort {
  background-color: #003e65;
  border: 0px;
  color: white;
}
#top-search-box,
#top-search-button {
  height: 25px;
}
#top-search-button span {
  vertical-align: top;
}
.top-search-container,
top-search-container-ipad {
  margin-top: 3px;
  z-index: 4;
}
.filter-head {
  color: #8de1ff;
}
.sort-head {
  color: #ff7a6c;
}
.sort-head,
.filter-head {
  margin-top: 10px;
}
.sort-select {
  width: 100%;
}
.dataset-count {
  height: 50px;
}
.filter .dropdown-button {
  width: 100%;
  height: 30px;
  border: 0px;
  border-radius: 5px;
  background-color: #FFF;
}
.filter button > * {
  display: inline;
}
.filter button > .placeholder {
  position: relative;
}
.checkbox {
  display: inline-block;
}
.filter-drop > ul {
  list-style: none;
  padding-left: 0px;
}
.filter-drop > ul > li {
  border-bottom: 1px solid #cccccc;
}
.filter-drop > ul > li > label {
  padding-left: 10px;
}
.filter-drop {
  width: 300px;
  display: none;
  position: absolute;
  background-color: #FFF;
  color: #003e65;
  z-index: 1;
  box-shadow: 10px 10px 5px #888888;
  padding-top: 10px;
}
.clearbox {
  margin-left: 10px;
  height: 25px;
  border: 0px;
  border-radius: 5px;
  background-color: #ff7a6c;
  color: #FFF;
  margin-bottom: 20px;
}
.dropdown-button > .placeholder {
  float: left;
}
.dropdown-button > .icon-dropdown {
  float: right;
  margin-top: 4px;
}
.top-search-container-ipad {
  display: none;
}
.counts,
.views {
  display: inline-block;
}
.mobile-filter,
.mobile-filter > .modal-dialog,
.mobile-filter > .modal-dialog > .modal-content {
  height: 100%;
}
.mobile-filter > .modal-dialog {
  margin: 0;
}
.mobile-filter > .modal-dialog > .modal-content {
  border-radius: 0;
  background-color: #E6E6E6;
}
.mobile-filter > .modal-dialog > .modal-content > .modal-footer > button {
  background-color: #ff7a6c;
  color: #FFF;
}
.mobile-filter > .modal-dialog > .modal-content > .modal-header {
  padding: 0;
}
.mobile-filter > .modal-dialog > .modal-content > .modal-header > button {
  color: #ff7a6c;
  font-size: 20px;
  opacity: 1;
  padding-right: 10px;
  padding-top: 10px;
}
.additional-info-title {
  color: #003e65;
  font-size: 20px;
}
.dataset-name-aditional-info {
  color: #27aae1;
  font-size: 20px;
}
.aditional-info {
  font-size: 20px;
  display: inline-block;
  word-break: break-all;
}
/*
Pagination
*/
.pagination {
  margin: 20px 0;
}
.pagination ul {
  display: inline-block;
  *display: inline;
  *zoom: 1;
  margin-left: 0;
  margin-bottom: 0;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
}
.pagination ul > li {
  display: inline;
}
.pagination ul > li > a,
.pagination ul > li > span {
  float: left;
  padding: 4px 12px;
  line-height: 20px;
  text-decoration: none;
  background-color: #ffffff;
  border: 1px solid #dddddd;
  border-left-width: 0;
}
.pagination ul > li > a:hover,
.pagination ul > li > a:focus,
.pagination ul > .active > a,
.pagination ul > .active > span {
  background-color: #f5f5f5;
}
.pagination ul > .active > a,
.pagination ul > .active > span {
  color: #999999;
  cursor: default;
}
/* ... */

